<resources>
    <string name="app_name">Phone</string>
    <string name="caller_name">Enter name</string>>
    <string name="caller_number">Enter phone number</string>
    <string name="start_fake_call">START </string>
    <string name="accept">Accept</string>
    <string name="decline">decline</string>
    <string name="caller">Caller</string>
    <string name="number">Number</string>
</resources>