<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#3F51B5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".callscreen">

    <TextView
        android:id="@+id/caller"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/caller"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/number"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
       android:layout_below="@+id/caller"
        android:layout_margin="20dp"
        android:textSize="20sp"
        />

    <ImageButton
        android:id="@+id/accept"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/number"
        android:layout_marginTop="250dp"
        android:layout_marginStart="45dp"
        android:contentDescription="@string/accept"
        android:src="@drawable/phone_call__1_"
        android:background="@drawable/ripple"
        />

    <ImageButton
        android:id="@+id/decline"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/number"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="45dp"
        android:contentDescription="@string/decline"
        android:src="@drawable/circle_phone_hangup"
        android:background="@drawable/ripple"

        />

</RelativeLayout>