<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADADAD"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/callerName"
        android:backgroundTint="#242424"
        android:autofillHints="name"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:hint="@string/caller_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/callerNumber"
        android:backgroundTint="#0C0C0D"
        android:autofillHints="phone number"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:hint="@string/caller_number"
        android:inputType="phone" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startFakeCall"
        android:layout_width="200dp"
        android:background="#242323"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:text="@string/start_fake_call"
         />

</LinearLayout>
